--- a/app/src/main/res/layout/flashcard_main.xml
+++ b/app/src/main/res/layout/flashcard_main.xml
@@ -49,29 +49,29 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/question_text"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="210dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="70dp"
         android:text="next" />
 
     <Button
         android:id="@+id/prev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/question_text"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="100dp"
-        android:layout_marginBottom="210dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="20dp"
         android:text="Prev" />
 
     <Button
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/question_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="144dp"
+        android:layout_marginTop="79dp"
         android:text="delete" />
 
 
