--- a/app/src/main/res/layout/flashcard_add_card_activity.xml
+++ b/app/src/main/res/layout/flashcard_add_card_activity.xml
@@ -33,7 +33,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
-        android:text="make changes" />
+        android:text="add card" />
 
     <ImageView
         android:id="@+id/close_button"
