--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_home"
-        android:icon="@android:drawable/ic_menu_compass"
-        android:title="Home"
+        android:id="@+id/action_feed"
+        android:icon="@drawable/ic_wifi_tethering_black_24dp"
+        android:title="Feed"
         android:visible="true"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_compose"
+        android:id="@+id/action_flashcards"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Compose"
+        android:title="Flashcards"
         android:visible="true"
         app:showAsAction="always" />
     <item
