--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,7 +9,7 @@
         android:visible="true"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_post"
+        android:id="@+id/action_compose"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="Post"
         android:visible="true"
