--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -24,7 +24,7 @@
 
     <Button
         android:id="@+id/btnLogOut"
-        android:background="@color/colorButton"
+        android:background="@color/darkblue"
         android:textColor="@color/colorButtonText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
