--- a/app/src/main/res/drawable/menu_button.xml
+++ b/app/src/main/res/drawable/menu_button.xml
@@ -4,8 +4,8 @@
 
     <gradient
         android:angle="90"
-        android:endColor="@color/cyan"
-        android:startColor="@color/cyan2" />
+        android:endColor="#0aa1ff"
+        android:startColor="#61119e" />
 
     <size
         android:width="40dp"
