--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,6 +9,13 @@
         android:title=""
         android:visible="true"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_compose"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title=""
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/action_flashcards"
         android:icon="@drawable/ic_baseline_call_to_action_24"
